Fix scrollbar bug on webkit

--- a/sass/components/_entry-content.scss
+++ b/sass/components/_entry-content.scss
@@ -53,6 +53,10 @@ $content-gutter: $spacing-large;
       width: 100%;
     }
 
+    p:last-child {
+      margin-bottom: 0;
+    }
+
     h3, h4, h5 {
       margin-top: 0;
     }
